--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Attendance Application</string>
     <string name="login">LOGIN</string>
     <string name="logout">LOGOUT</string>
+    <string name="reset_password">RESET PASSWORD</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="forgot_password">Forgot password</string>
+    <string name="title_home">Home</string>
+    <string name="title_attendance">Attendance</string>
+    <string name="title_profile">Profile</string>
 </resources>
